src/objects/Speaker__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Best_Practice_Story_Brief_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Best Practice Story (Brief Description)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Biography</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expertise_level__c</fullName>
        <label>Expertise level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nokia</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
                <value>
                    <fullName>ION</fullName>
                </value>
                <value>
                    <fullName>FN</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the speaker received a gift.</inlineHelpText>
        <label>Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hero_Slide__c</fullName>
        <label>Hero Slide</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Handler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Handler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publish_to_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used for web integration if you wish you publish data to your website.</description>
        <label>Publish to Web?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Form__c</fullName>
        <label>Release Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received - Yes</fullName>
                </value>
                <value>
                    <fullName>Received - No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_to__c</fullName>
        <formula>Speaker_Internal__r.Manager.LastName</formula>
        <inlineHelpText>Information is picked from the user details (Manager) in the tool.</inlineHelpText>
        <label>Reporting to</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speak_Hierarchy__c</fullName>
        <label>Speak Hierarchy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speaker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker (External)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speaker_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Speaker Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Speaker_Display_Name__c</fullName>
        <formula>Speaker_Contact__r.FirstName &amp; &quot; &quot; &amp;  Speaker_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaker Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Image__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Speaker Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Speaker_Internal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker (Internal)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Speakers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speaker_Rating__c</fullName>
        <inlineHelpText>Enter speaker evaluation score (1-5, with 5 as the highest)</inlineHelpText>
        <label>Speaker Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speaker_Status__c</fullName>
        <label>Speaker Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speaker_Type__c</fullName>
        <label>Speaker Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Customer Speaker</fullName>
                </value>
                <value>
                    <fullName>Partner Speaker</fullName>
                </value>
                <value>
                    <fullName>Analyst Speaker</fullName>
                </value>
                <value>
                    <fullName>Industry Speaker</fullName>
                </value>
                <value>
                    <fullName>Academic Speaker</fullName>
                </value>
                <value>
                    <fullName>Celebrity Speaker</fullName>
                </value>
                <value>
                    <fullName>Session Speaker</fullName>
                </value>
                <value>
                    <fullName>Keynote Speaker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speaker_s_email__c</fullName>
        <formula>Speaker_Internal__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Email is picked from the user details (Email) in the tool.</inlineHelpText>
        <label>Speaker&apos;s email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_s_office_location__c</fullName>
        <formula>Speaker_Internal__r.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Office location is picked from user details (City) in the tool.</inlineHelpText>
        <label>Speaker&apos;s office location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_s_organization__c</fullName>
        <formula>Speaker_Internal__r.Division</formula>
        <inlineHelpText>Organization is picked from the user details (Division) in the tool.</inlineHelpText>
        <label>Speaker&apos;s organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_s_title__c</fullName>
        <formula>Speaker_Internal__r.Title</formula>
        <inlineHelpText>Title is picked from the user details (Title) in the tool.</inlineHelpText>
        <label>Speaker&apos;s title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Expertise__c</fullName>
        <label>Topic Expertise</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Expertise_level__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Nokia company presentation</fullName>
                </value>
                <value>
                    <fullName>Nokia strategy and vision</fullName>
                </value>
                <value>
                    <fullName>Nokia Innovation Strategy</fullName>
                </value>
                <value>
                    <fullName>Bell Labs study #Future X#</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Operator Business strategies</fullName>
                </value>
                <value>
                    <fullName>Nokia standardization activities</fullName>
                </value>
                <value>
                    <fullName>Nokia Mobile Networks strategy and vision</fullName>
                </value>
                <value>
                    <fullName>Mobile Networks Core Strategy update</fullName>
                </value>
                <value>
                    <fullName>Evolution</fullName>
                </value>
                <value>
                    <fullName>Cloud RAN</fullName>
                </value>
                <value>
                    <fullName>FastMile</fullName>
                </value>
                <value>
                    <fullName>Radio Strategy update</fullName>
                </value>
                <value>
                    <fullName>Mobile Edge Computing</fullName>
                </value>
                <value>
                    <fullName>Global Services portolio</fullName>
                </value>
                <value>
                    <fullName>5G</fullName>
                </value>
                <value>
                    <fullName>Small cells</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>IP Strategy update</fullName>
                </value>
                <value>
                    <fullName>Optical Strategy update</fullName>
                </value>
                <value>
                    <fullName>Fixed Access Strategy Update</fullName>
                </value>
                <value>
                    <fullName>Applications &amp; Analytics strategy</fullName>
                </value>
                <value>
                    <fullName>Cloud Strategy update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Track</label>
        <referenceTo>Track__c</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Speaker_Internal__c</columns>
        <columns>Speaker_Display_Name__c</columns>
        <columns>Track__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_internal_speakers</fullName>
        <columns>NAME</columns>
        <columns>Speaker_Internal__c</columns>
        <columns>Speaker_s_title__c</columns>
        <columns>Speaker_s_organization__c</columns>
        <columns>Expertise_level__c</columns>
        <columns>Topic_Expertise__c</columns>
        <columns>Reporting_to__c</columns>
        <columns>Speaker_Details__c</columns>
        <columns>Speaker_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All internal speakers</label>
    </listViews>
    <nameField>
        <displayFormat>Speaker-{0000}</displayFormat>
        <label>Speaker Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>